fixed css issues with background image, alignments & howtopraysalah styling

--- a/src/styles/howToPraySalah.sass
+++ b/src/styles/howToPraySalah.sass
@@ -1,6 +1,6 @@
 .howToPraySalahPageWrapper
   margin: 7rem 0 0
-  height: calc(100vh - 42px - 7rem)
+  // height: calc(100vh - 42px - 7rem)
 
   .titleContainer
     text-align: right
@@ -24,7 +24,7 @@
       z-index: 1
 
   .contentContainer
-    height: calc(100% - 29px - 15px)
+    // height: calc(100% - 29px - 15px)
     background-color: rgba(217, 231, 233, 0.8)
 
     section.section
@@ -32,9 +32,11 @@
       // rakaats margin & rakaats content
       // height: calc(100% - 3rem - 44px - 3.5rem - 67px)
       // height: calc(100% - 3rem - 3.5rem - 67px)
-      height: calc(100% - 44px)
+      // height: calc(100% - 44px) // temp
       padding-top: 1.5rem
       padding-bottom: 1.5rem
+      margin-left: 3rem
+      margin-right: 3rem
 
       .columns,.column
         height: 100%
@@ -43,11 +45,13 @@
 
       .contentVerticalCentre
         position: relative
-        top: 50%
-        transform: translateY(-50%)
+        margin: 3rem 0
+        // top: 50%
+        // transform: translateY(-50%)
 
   .rakaatsInfo
     padding: 2rem 0 0
+    margin-top: 1rem
     position: relative
     // used for breaking paras into blocks for rakaats
     // section, bug in Bulma? File a github issue
@@ -62,11 +66,12 @@
   display: flex
   flex-direction: row-reverse
   flex-wrap: wrap
+  margin: 1rem 0
 
   div.wordsContainer
     display: inline-block
-    background-color: rgba(225,225,225,0.9)
-    border: 1px solid white
+    background-color: rgba(235, 235, 235, 0.5)
+    border: 1px solid rgb(235,235,235)
     border-radius: 24px
     padding: 5px
     margin: 3px 1px
@@ -95,8 +100,16 @@
 .transliterationContainer
   padding: 1rem 0
 
+  span
+    background-color: rgba(235, 235, 235, 0.5)
+    border-radius: 3px
+    font-weight: 600
 
 
 svg.svgIllustration
   width: 100%
-  max-height: calc(100% - 3.5rem - 44px)
+  // max-height: calc(100% - 3.5rem - 44px)
+  min-height: 420px
+  max-height: 600px
+  height: 50%
+  background-color: orange
