--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -10,7 +10,7 @@ $text: $font-blue
 $text-strong: $font-blue
 $text-color: $font-blue
 $title-color: $font-blue
-$family-sans-serif: "Karla", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
+$family-sans-serif: "Karla", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Amiri", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $navbar-item-color: $font-blue
 $subtitle-color: $font-blue
 $link: #0d324d
@@ -27,8 +27,8 @@ html, body
   color: $text
   padding: 0
   margin: 0
-  width: 100%
-  height: 100vh
+  width: 100vw
+  // height: 100vh
 
 body
   background-image: url("../images/background.jpg")
@@ -38,7 +38,7 @@ body
   background-size: cover
 
 .pageWrapper
-  height: 100vh
+  // height: 100vh
 
 svg
   fill: $font-blue
@@ -134,7 +134,7 @@ button.button
     transform: rotate(45deg)
   
   .pagination-next.pageControl
-    right: 10px
+    right: 20px
     transform: rotate(225deg)
 
 // finally import Bulma
